tests/ui/modules/no-transparent-fail.stderr
error: cannot find macro `s` in this scope
  --> $DIR/no-transparent-fail.rs:30:9
   |
LL |         s!();
   |         ^
   |
   = help: have you added the `#[macro_use]` on the module/import?
help: consider importing this macro through its public re-export
   |
LL +         use crate::y::s;
   |

error[E0412]: cannot find type `S` in this scope
  --> $DIR/no-transparent-fail.rs:32:18
   |
LL |         struct Y(S);
   |                  ^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL |         struct Y<S>(S);
   |                 +++

error[E0412]: cannot find type `C` in this scope
  --> $DIR/no-transparent-fail.rs:37:21
   |
LL |         struct Y(S);
   |         ------------ similarly named struct `Y` defined here
...
LL |         fn bar() -> C {
   |                     ^
   |
help: a struct with a similar name exists
   |
LL -         fn bar() -> C {
LL +         fn bar() -> Y {
   |
help: you might be missing a type parameter
   |
LL |         fn bar<C>() -> C {
   |               +++

error[E0433]: failed to resolve: use of undeclared type `S`
  --> $DIR/no-transparent-fail.rs:35:41
   |
LL |             const SNAME: &'static str = S::NAME;
   |                                         ^
   |                                         |
   |                                         use of undeclared type `S`
   |                                         help: a struct with a similar name exists: `Y`

error[E0599]: no method named `method` found for unit type `()` in the current scope
  --> $DIR/no-transparent-fail.rs:40:16
   |
LL |     fn method(&self) {}
   |        ------ the method is available for `()` here
...
LL |             ().method();
   |                ^^^^^^ method not found in `()`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `IWantAMethod` which provides `method` is implemented but not in scope; perhaps you want to import it
   |
LL +         use crate::IWantAMethod;
   |

error[E0433]: failed to resolve: use of undeclared type `C`
  --> $DIR/no-transparent-fail.rs:42:13
   |
LL |             C::B
   |             ^
   |             |
   |             use of undeclared type `C`
   |             help: a struct with a similar name exists: `Y`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0412, E0433, E0599.
For more information about an error, try `rustc --explain E0412`.
